# canvas-dl

./: .gitignore  README.md  pyproject.toml
src/canvas_dl/: __init__.py  util.py
src/canvas_dl/canvas/: __init__.py  db.py  models.py
